<package format="2">
    <name>fake_localization</name>
    <version>1.12.13</version>
    <description>A ROS node that simply forwards odometry information.</description>
    <author>Ioan A. Sucan</author>
    <author>contradict@gmail.com</author>
    <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
    <maintainer email="mferguson@fetchrobotics.com">Michael Ferguson</maintainer>
    <license>BSD</license>
    <url>http://wiki.ros.org/fake_localization</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>angles</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rosconsole</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>message_filters</build_depend>
    <build_depend>rospy</build_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>rosconsole</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>tf</exec_depend>
    <exec_depend>message_filters</exec_depend>
    <exec_depend>rospy</exec_depend>

</package>
