<?xml version="1.0"?>
<package format="3">
  <name>go_back_recovery</name>
  <version>0.0.0</version>
  <description>
  
    This package provides a recovery behavior for the navigation stack that attempts to make the robot go back to where it came from by following the path.
  
  </description>
  <maintainer email="hayato.terao@lexxpluss.com">Hayato Terao</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>base_local_planner</depend>
  <depend>costmap_2d</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_core</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <nav_core plugin="${prefix}/go_back_plugin.xml" />
  </export>

</package>
