<package>
    <name>map_server</name>
    <version>1.11.2</version>
    <description>

        map_server provides the <tt>map_server</tt> ROS <a href="http://www.ros.org/wiki/Nodes">Node</a>, which offers map data as a ROS <a href="http://www.ros.org/wiki/Services">Service</a>. It also provides the <tt>map_saver</tt> command-line utility, which allows dynamically generated maps to be saved to file.

    </description>
    <author>Brian Gerkey, Tony Pratkanis</author>
    <author>contradict@gmail.com</author>
    <maintainer email="hersh@willowgarage.com">Dave Hershberger</maintainer>
    <url>http://ros.org/wiki/map_server</url>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>rostest</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>yaml-cpp</build_depend>
    <build_depend>sdl-image</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>rostest</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>yaml-cpp</run_depend>
    <run_depend>sdl-image</run_depend>

    <export>
        <cpp cflags="-I${prefix}/include `rosboost-cfg --cflags`" lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib `rosboost-cfg --lflags thread`"/>
    </export>

    <test_depend>rospy</test_depend>
</package>
